# MMAI-reverb

./: .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  milestone1.md  reverb_research.md
docs/: MMAI_presentation1.pptx  MVP3.ipynb  MVP3.slides.html  Milestone3_parameters_Research.txt  Presentation.html  Presentation.ipynb  milestone1.md  reverb_research.md
src/: GUI  GUI.c  GUI.h  delay_stuff.c  delay_stuff.h  functions.c  functions.h  main.c  main.h  main_dummy.c  reverb_fake.c  reverb_fake.h
